Updated api responses for login page
