# backend/docs/swagger.json
@@ -35,13 +35,13 @@
                     "401": {
                         "description": "Session expired, please log in again",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.Errors"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.Errors"
                         }
                     }
                 }
@@ -61,13 +61,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.UserDataResponse"
+                            "$ref": "#/definitions/api.UserData"
                         }
                     },
                     "401": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.Errors"
                         }
                     }
                 }
@@ -75,7 +75,7 @@
         }
     },
     "definitions": {
-        "api.ErrorResponse": {
+        "api.Errors": {
             "type": "object",
             "properties": {
                 "code": {
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "api.UserDataResponse": {
+        "api.UserData": {
             "type": "object",
             "properties": {
                 "email": {
